<resources>
    <string name="app_name">ZonaBlava</string>
    <string name="title_home">Inicio</string>
    <string name="title_ticket">Tickets</string>
    <string name="title_vehicles">Vehículos</string>
    <string name="title_account">Cuenta</string>
    <string name="title_search">Búsqueda</string>
    <string name="title_add_vehicle">Añadir vehículo</string>

    <!-- HomeFragment -->
    <string name="home_search_bar_title">¿Dónde quieres aparcar?</string>

    <!-- Vehicles Fragment -->
    <string name="vehicles_add_vehicle_button">Añadir vehículo</string>
    <string name="vehicles_edit_vehicle">Editar vehículo</string>
    <string name="vehicles_license_plate_placeholder">Matrícula</string>
    <string name="vehicles_license_plate_error">La matrícula debe tener 4 números seguidos de 3 consonantes</string>
    <string name="vehicles_vehicle_brand">Marca</string>
    <string name="vehicles_vehicle_model">Modelo</string>
    <string name="vehicles_vehicle_alias">Alias (opcional)</string>
    <string name="vehicles_delete_vehicle">Eliminar</string>
    <string name="vehicles_save_vehicle">Guardar</string>

    <!-- Bottom sheet location permission -->
    <string name="bottom_sheet_permission_allow">Activar permiso</string>
    <string name="bottom_sheet_permission_maybe_later">Quizás más tarde</string>
    <string name="bottom_sheet_permission_explanation">Establece tu ubicación para que podamos localizar tu lugar de aparcamiento</string>
    <string name="bottom_sheet_permission_title">Permiso de ubicación</string>

    <!-- Bottom sheet change to fine location -->
    <string name="bottom_sheet_change_to_fine_location_title">Comparte tu ubicación precisa</string>
    <string name="bottom_sheet_change_to_fine_location_allow">Cambiar a ubicación precisa</string>
    <string name="bottom_sheet_change_to_fine_location_carry_on">Seguir sin ella</string>
    <string name="bottom_sheet_change_to_fine_location_explanation">Nos gustaría utilizar tu ubicación precisa para posicionar exactamente tu lugar de aparcamiento</string>
    <string name="content_description_search_bar">Esto es una barra de búsqueda</string>
    <string name="content_description_nested_scroll_view">Esto es una vista donde se puede hacer scroll</string>

    <!-- Bottom sheet park vehicle -->
    <string name="bottom_sheet_parking_type_regulated_zone">Ticket</string>
    <string name="bottom_sheet_parking_type_subtitle">Zona Azul</string>
    <string name="bottom_sheet_parking_confirm_button">Continuar</string>
    <!-- Park vehicle if no blue zone or parking -->
    <string name="bottom_sheet_parking_type_no_regulated_zone">Aparcar</string>
    <string name="bottom_sheet_parking_save_location">Guardar dirección</string>
    <string name="bottom_sheet_parking_look_around">Buscar parking cerca</string>

    <!-- Setting's bottom sheet-->
    <string name="settings_bottom_sheet_park_toggle_button">Aparcar</string>
    <string name="settings_bottom_sheet_just_watch_toogle_button">Mirar</string>
    <string name="settings_bottom_sheet_switch_section_title">Tipos de estacionamiento</string>
    <string name="settings_bottom_sheet_all_zones_switch">Todos</string>
    <string name="settings_bottom_sheet_blue_zone_switch">Zona Azul</string>
    <string name="settings_bottom_sheet_orange_and_green_zone_switch">Zona Naranja / Zona Verde</string>
    <string name="settings_bottom_sheet_parking_switch">Parkings</string>

    <!-- Content descriptions -->
    <string name="content_description_bottom_sheet_permission">Imagen que representa un mapa con un marcador sobre él</string>
    <string name="content_description_bottom_sheet_change_fine_location">Imagen que representa una persona mirando a través de un telescopio</string>
    <string name="content_description_map_view">Esto es un mapa que inicialmente está centrado en la ciudad de Valencia (España)</string>
    <string name="content_description_my_location_button">Esto es un botón para posicionar en el mapa tu ubicación</string>
    <string name="content_description_settings_button">Esto es un botón para abrir los ajustes del mapa</string>
    <string name="content_description_bottom_sheet_parking_image">Esto es el símbolo de Parking</string>

    <!-- Mock text -->
    <string name="mock_street">Calle de Prueba de la Trinidad de su Alfonso 23, Valencia</string>
</resources>