<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.canolabs.zonablava.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_tickets"
        android:name="com.canolabs.zonablava.ui.dashboard.TicketsFragment"
        android:label="@string/title_ticket"
        tools:layout="@layout/fragment_tickets" />

    <fragment
        android:id="@+id/navigation_vehicles"
        android:name="com.canolabs.zonablava.ui.notifications.VehiclesFragment"
        android:label="@string/title_vehicles"
        tools:layout="@layout/fragment_vehicles" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.canolabs.zonablava.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>