<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/content_description_map_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:id="@+id/searchButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_bar_height"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:paddingHorizontal="@dimen/padding_large"
        android:backgroundTint="@color/md_theme_light_tertiaryContainer"
        android:text="@string/home_search_bar_title"
        android:drawableLeft="@drawable/search"
        android:drawablePadding="@dimen/padding_medium"
        android:textSize="@dimen/text_size_small"
        android:fontFamily="@font/ezra_medium"
        android:textColor="@color/md_theme_light_onBackground"
        android:gravity="start|center_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/myLocationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="12dp"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_small"
        android:src="@drawable/my_location_fill"
        android:background="@drawable/background_my_location_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/content_description_my_location_button" />

    <ImageButton
        android:id="@+id/homeSettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_small"
        android:background="@drawable/background_my_location_button"
        android:src="@drawable/settings_fill"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/content_description_settings_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>