<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/bottom_sheet_map_settings_drag_handle"
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@color/md_theme_light_onBackground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/bottom_sheet_map_settings_toggle_container"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginVertical="@dimen/margin_medium"
        android:gravity="center"
        app:selectionRequired="true"
        app:checkedButton="@+id/bottom_sheet_map_settings_watch_toggle"
        app:singleSelection="true"
        app:layout_constraintBottom_toTopOf="@+id/bottom_sheet_map_settings_switch_section_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_map_settings_drag_handle">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bottom_sheet_map_settings_park_toggle"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/settings_bottom_sheet_park_toggle_button"
            android:textSize="@dimen/text_size_large"
            app:icon="@drawable/pin_drop_symbol"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconSize="36dp"
            app:strokeColor="@color/md_theme_light_onTertiaryContainer" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bottom_sheet_map_settings_watch_toggle"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/settings_bottom_sheet_just_watch_toogle_button"
            android:textSize="@dimen/text_size_large"
            app:icon="@drawable/eye_symbol"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconSize="36dp"
            app:strokeColor="@color/md_theme_light_onTertiaryContainer" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:id="@+id/bottom_sheet_map_settings_switch_section_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_regular"
        android:layout_marginBottom="@dimen/margin_small"
        android:textSize="@dimen/text_size_extra_large"
        android:textColor="@color/md_theme_light_onPrimaryContainer"
        android:text="@string/settings_bottom_sheet_switch_section_title"
        app:layout_constraintBottom_toTopOf="@+id/bottom_sheet_map_settings_switch_container"
        app:layout_constraintEnd_toEndOf="@+id/bottom_sheet_map_settings_switch_container"
        app:layout_constraintStart_toStartOf="@+id/bottom_sheet_map_settings_switch_container" />


    <LinearLayout
        android:id="@+id/bottom_sheet_map_settings_switch_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginHorizontal="@dimen/margin_huge"
        android:paddingHorizontal="@dimen/padding_huge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/bottom_sheet_map_settings_all_zones_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_mini"
            android:paddingEnd="@dimen/padding_small"
            android:textAlignment="viewEnd"
            android:textColor="@color/md_theme_light_onPrimaryContainer"
            android:textSize="@dimen/text_size_regular"
            android:text="@string/settings_bottom_sheet_all_zones_switch"/>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/bottom_sheet_map_settings_blue_zone_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_mini"
            android:paddingEnd="@dimen/padding_small"
            android:textAlignment="viewEnd"
            android:textColor="@color/md_theme_light_onPrimaryContainer"
            android:textSize="@dimen/text_size_regular"
            android:text="@string/settings_bottom_sheet_blue_zone_switch"/>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/bottom_sheet_map_settings_orange_and_green_zone_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_mini"
            android:paddingEnd="@dimen/padding_small"
            android:checked="false"
            android:textAlignment="viewEnd"
            android:textColor="@color/md_theme_light_onPrimaryContainer"
            android:textSize="@dimen/text_size_regular"
            android:text="@string/settings_bottom_sheet_orange_and_green_zone_switch"/>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/bottom_sheet_map_settings_parking_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_mini"
            android:paddingEnd="@dimen/padding_small"
            android:checked="false"
            android:textAlignment="viewEnd"
            android:textColor="@color/md_theme_light_onPrimaryContainer"
            android:textSize="@dimen/text_size_regular"
            android:text="@string/settings_bottom_sheet_parking_switch"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>