<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_light_background">

    <ImageView
        android:id="@+id/bottom_sheet_change_to_fine_location_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_huge"
        android:layout_margin="35dp"
        android:contentDescription="@string/content_description_bottom_sheet_change_fine_location"
        app:layout_constraintBottom_toTopOf="@+id/bottom_sheet_change_to_fine_location_title"
        app:layout_constraintEnd_toEndOf="@+id/bottom_sheet_change_to_fine_location_title"
        app:layout_constraintStart_toStartOf="@+id/bottom_sheet_change_to_fine_location_title"
        app:srcCompat="@drawable/artistic_change_to_fine_location" />

    <TextView
        android:id="@+id/bottom_sheet_change_to_fine_location_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginVertical="@dimen/margin_extra_large"
        android:fontFamily="@font/ezra_bold"
        android:gravity="center"
        android:text="@string/bottom_sheet_change_to_fine_location_title"
        android:textAlignment="center"
        android:textColor="@color/md_theme_light_onBackground"
        android:textSize="@dimen/text_size_extra_large"
        app:layout_constraintBottom_toTopOf="@+id/bottom_sheet_change_to_fine_location_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/bottom_sheet_change_to_fine_location_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_huge"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/bottom_sheet_change_to_fine_location_explanation"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintBottom_toTopOf="@+id/bottom_sheet_change_to_fine_location_allow_button"
        app:layout_constraintEnd_toEndOf="@+id/bottom_sheet_change_to_fine_location_allow_button"
        app:layout_constraintStart_toStartOf="@+id/bottom_sheet_change_to_fine_location_allow_button" />

    <Button
        android:id="@+id/bottom_sheet_change_to_fine_location_allow_button"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_mini"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:paddingHorizontal="@dimen/padding_large"
        style="@style/CustomPermissionBottomSheetButtons"
        android:textSize="@dimen/text_size_regular"
        android:textColor="@color/md_theme_light_onPrimary"
        android:backgroundTint="@color/md_theme_light_primary"
        android:text="@string/bottom_sheet_change_to_fine_location_allow"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="@+id/bottom_sheet_change_to_fine_location_dismiss_button"
        app:layout_constraintRight_toRightOf="@+id/bottom_sheet_change_to_fine_location_dismiss_button"
        app:layout_constraintBottom_toTopOf="@+id/bottom_sheet_change_to_fine_location_dismiss_button"
        />


    <Button
        android:id="@+id/bottom_sheet_change_to_fine_location_dismiss_button"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginVertical="@dimen/margin_medium"
        style="@style/CustomPermissionBottomSheetButtons"
        android:textColor="@color/md_theme_light_onPrimaryContainer"
        android:backgroundTint="@color/md_theme_light_primaryContainer"
        android:text="@string/bottom_sheet_change_to_fine_location_carry_on"
        android:textSize="@dimen/text_size_regular"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>